# Clis

./: .gitignore  README.md  sync.yaml  sync_analysis.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  sync-from-docs.yml  sync-to-repos.yml
adc/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
adc/adc_cli/: __init__.py  __main__.py  main.py
adc/tests/: conftest.py  test_client.py  test_commands.py  test_config.py  (+2 more)
aichat/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
claude/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
deepseek/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dreamina/: CHANGELOG.md  README.md  pyproject.toml
fish/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
flux/: README.md
gemini/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
gemini/gemini_cli/: __init__.py  __main__.py  main.py
gemini/gemini_cli/commands/: __init__.py  chat.py  generate.py  info.py  task.py  video.py
gemini/gemini_cli/core/: __init__.py  client.py  config.py  exceptions.py  output.py
gemini/tests/: conftest.py  test_commands.py
glm/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
grok/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
hailuo/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
happyhorse/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
hcaptcha/: .env.example  CHANGELOG.md  README.md  pyproject.toml
image2text/: .env.example  CHANGELOG.md  README.md  pyproject.toml
kimi/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
kling/: CHANGELOG.md  README.md
luma/: README.md
midjourney/: .coverage  CHANGELOG.md  README.md  pyproject.toml
openai/: .env.example  CHANGELOG.md  README.md  pyproject.toml
recaptcha/: .env.example  CHANGELOG.md  README.md  pyproject.toml
seedance/: README.md
seedream/: README.md
suno/: CHANGELOG.md  README.md
turnstile/: CHANGELOG.md  README.md  pyproject.toml
veo/: README.md
wan/: CHANGELOG.md  README.md
webextrator/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
(+338 files in other folders)
